# plog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/: utils.cmake
example/: CMakeLists.txt  example.cpp
src/: CMakeLists.tx  plog.h
